Fix overflow edge shadow fade-out animation.

--- a/src/content/components/OverflowEdgeIndicator.css
+++ b/src/content/components/OverflowEdgeIndicator.css
@@ -8,7 +8,8 @@
   visibility: hidden;
   z-index: 2;
   opacity: 0;
-  transition: 150ms opacity ease-in-out;
+  transition: 150ms ease-in-out;
+  transition-property: opacity, visibility;
 }
 
 .overflowEdgeIndicatorEdge.topEdge,
